--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -12,7 +12,6 @@
   flex-wrap: wrap;
   background: #f8f9fa;
   padding: 0.5%;
-  width: 100%;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -114,9 +113,8 @@
   flex-wrap: wrap;
   justify-content: space-between;
   background-color: #f8f9fa;
-  margin-top: 2%;
-  margin-bottom: 0;
-  padding: 1% 0% 0% 4% ;
+  margin: 2 0% 0% 0%;
+  padding: 4% 0% 0% 4%;
 }
 
 .header-text {
