--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -60,7 +60,7 @@
                     <div class="col-4">
                         <div class="rotate">
                             <div>
-                                <img src="{{url_for('static', filename='img/sceau_accueil.png')}}" class="header-img" alt="Sceau de Charles Ier">
+                                <img src="{{url_for('static', filename='img/sceau_accueil.png')}}" class="img-global" alt="Sceau de Charles Ier">
                             </div>
                         </div>
                     </div>
