--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -25,12 +25,22 @@
     =============================================================================================
 */
 
+/* Global : balises */
+
+html {
+    height: 100%
+}
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%
 }
 
-/* LIENS */
+sup {
+    line-height: 0;
+}
+
 a:link, a:visited {
     text-decoration: none;
     color: black;
@@ -41,35 +51,32 @@ a:hover, a:active {
     color: #B1B0B0;
 }
 
-/* TITRES GLOBAL */
+/* Global : titres */
 .h1_global {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     margin: auto;
     text-align: center;
 }
 
 .h2_global {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    text-align: center;
     font-size: x-large;
     margin-top: 4%;
 }
 
 .h3_global {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
     font-size: large;
     font-style: bold;
     margin-top: 4%;
 }
 
+/* Global : images */
+.img-global {
+  width: 100%;
+  height: auto;
+}
+
 /* CONTENEUR */
 .arriere_plan {
-    background-color: #ffffff;
     padding-top: 5px;
     padding-bottom: 0px;
     padding-left: 20px;
@@ -84,11 +91,6 @@ a:hover, a:active {
 /* ACCUEIL */
 .global-home {
     margin: 5% auto 7% auto ;
-}
-
-.img {
-    width: 100%;
-    height: auto;
 }
 
 .caption-main {
@@ -115,27 +117,9 @@ a:hover, a:active {
 }
 
 /* PAGES PROJET = À PROPOS, BIBLIOGRAPHIE, LE DUC */
-.projet-global {
-    display: flex;
-    flex-direction: row;
-    margin-top: 3%;
-    margin-bottom: 3%;
-}
-
-.projet-img-global {
-    display: flex;
-    flex-direction: column;
-    margin-top: 5%;
-    width: auto;
-}
-
-.projet-img-legend {
-    width: 100%;
-}
-
 .projet-text {
     text-align: justify;
-    margin-top: 4%;
+    margin: 4% auto 8% auto;
 }
 
 #biblio > p {
