--- a/app/templates/accueil.html
+++ b/app/templates/accueil.html
@@ -4,11 +4,11 @@
       <div class="row">
         <div class="col">
             <figure>
-                <img src="{{url_for('static', filename='img/image1.jpg')}}" alt="Armoiries de Charles de Bourbon" class="img"/>
-            <figcaption>
-                <p class="caption-main">Armes de Charles I<sup>er</sup>, armorial de Guillaume Revel.</p>
-                <p class="caption-sub">(BnF, ms. fr. 22297 &mdash; XV<sup>e</sup> siècle)</p>
-            </figcaption>
+                    <img src="{{url_for('static', filename='img/image1.jpg')}}" alt="Armoiries de Charles de Bourbon" class="img-global"/>
+                <figcaption>
+                    <p class="caption-main">Armes de Charles I<sup>er</sup>, armorial de Guillaume Revel.</p>
+                    <p class="caption-sub">(BnF, ms. fr. 22297 &mdash; XV<sup>e</sup> siècle)</p>
+                </figcaption>
             </figure>
         </div>
         <div class="col">
@@ -19,17 +19,4 @@
         </div>
       </div>
     </div>
-    <!--<div class="global-home">
-        <figure class="div-img">
-            <img src="{{url_for('static', filename='img/image1.jpg')}}" alt="Armoiries de Charles de Bourbon" class="img"/>
-            <figcaption>
-                <p class="caption-main">Armes de Charles I<sup>er</sup>, armorial de Guillaume Revel.</p>
-                <p class="caption-sub">(BnF, ms. fr. 22297 &mdash; XV<sup>e</sup> siècle)</p>
-            </figcaption>
-        </figure>
-        <div class="home-text">
-            <p>Cette édition numérique a pour but de présenter un échantillon des actes de Charles I<sup>er</sup> de Bourbon et d’Agnès de Bourgogne, duc et et duchesse de Bourbon de 1434 à 1456. Elle s'appuie sur un mémoire de Master recherche dirigé par Olivier Mattéoni et présenté à l'École d'histoire de l'Université Paris I Panthéon-Sorbonne en juin 2018, dont le sujet était l'étude de la chancellerie de Charles I<sup>er</sup> au prisme de ses actes.</p>
-            <p>L'application est développée par Jean-Damien Généro dans le cadre des enseignements du Master &#171; Technologies numériques appliquées à l'histoire &#187; de l'École nationale des chartes (XML-TEI, XSLT, HTML, CSS, SQL, Python).</p>
-        </div>
-    </div>-->
 {% endblock %}
