--- a/app/templates/pages/bibliographie.html
+++ b/app/templates/pages/bibliographie.html
@@ -1,26 +1,23 @@
 {% extends "conteneur.html" %}
 {% block corps %}
-<div class="projet-global" id="page-wrap">
-	<div>
-		<figure class="projet-img-global" id="sidebar">
-			<div>
-				<div>
-					<img src="{{url_for('static', filename='img/bibliographie.jpg')}}" alt="Acte du 1er octobre 1435" width="100%" height="auto" />
-				</div>
-			</div>
-			<figcaption class="projet-img-legend">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-5">
+    	<figure>
+			<img src="{{url_for('static', filename='img/bibliographie.jpg')}}" alt="Acte du 1er octobre 1435" class="img-global"/>
+			<figcaption>
 				<p class="caption-main">Ratification et confirmation par Charles de Bourbon des lettres de la fondation des Célestins de Vichy par son grand-père Louis II. Copie du XVIII<sup>e</sup> siècle (Archives nationales, K 188, cote 21<sup>4</sup>).</p>
 			</figcaption>
 		</figure>
-	</div>
-	<div>
-		<div class="h1_global">
+    </div>
+    <div class="col-sm-7">
+    	<div class="h1_global">
 			<h1>Indications bibliographiques</h1>
 		</div>
 		<div class="projet-text" id="biblio">
 			<div>
 				<div class="projet-text" id="biblio">
-					<h3 class="h3_global">Édition de corpus</h3>
+					<h3 class="h3_global">Éditions de corpus</h3>
 					<p>Valentine Martin, <i>La chancellerie bourbonnaise à la fin du XIII<sup>e</sup> siècle et sous les principats de Louis I<sup>er</sup> et Pierre I<sup>er</sup> de Bourbon (ca. 1270-1356), suivi d’un recueil des actes de la chancellerie</i>, mémoire de Master recherche sous la direction d'Olivier Mattéoni, École d'histoire de la Sorbone (Paris I), 2019.</p>
 					<p>Jean-Damien Généro, <i>La chancellerie de Charles I<sup>er</sup> de Bourbon (1425-1456), avec l'édition de ses actes et de ceux de son épouse, Agnès de Bourgogne</i>, mémoire de Master recherche sous la direction d'Olivier Mattéoni, École d'histoire de la Sorbone (Paris I), 2018.</p>
 					<h3 class="h3_global">Articles scientifiques</h3>
@@ -56,6 +53,7 @@
 				<p>Michael Jones, <i>Recueil des actes de Jean IV, duc de Bretagne</i>, 2 vol., Paris, Klincksieck, 1980 et 1983.</p>
 				<p><i>Lettres et mandements de Jean V, duc de Bretagne</i>, 5 vol., René Blanchard (éd.) Nantes, Société des bibliophiles bretons et de l’histoire de Bretagne, 1889-1895.</p>
 			</div>
-	</div>
+    </div>
+  </div>
 </div>
 {% endblock %}
