--- a/app/templates/pages/corpus.html
+++ b/app/templates/pages/corpus.html
@@ -1,7 +1,7 @@
 {% extends "conteneur.html" %}
 {% block corps %}
     <div class="corpus-global">
-    	<h1 class="h1_global">Corpus des actes de Charles Ier de Bourbon</h1>
+    	<h1 class="h1_global">Corpus des actes de Charles I<sup>er</sup> de Bourbon</h1>
         <div>
             <h2 class="h2_global">Présentation du corpus</h2>
             <p>Le corpus des actes de Charles I<sup>er</sup> de Bourbon et d'Agnès de Bourgogne se compose de 405 documents, dont 373 sont passés au nom du duc et 32 au nom de la duchesse ; parmi ceux-ci, le couple ducal passe six actes en commun.</p>
