--- a/app/templates/partials/css_projet.html
+++ b/app/templates/partials/css_projet.html
@@ -5,3 +5,4 @@
 <link href="{{ url_for('static', filename='css/font.css')}}" rel="stylesheet" type="text/css">
 <link href="{{ url_for('static', filename='css/form.css')}}" rel="stylesheet" type="text/css">
 <link href="{{ url_for('static', filename='css/bootstrap-grid.min.css')}}" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='img/ch_cs.png')}}" />
