ajout crédits photographies des actes

--- a/app/templates/pages/mentionslegales.html
+++ b/app/templates/pages/mentionslegales.html
@@ -20,6 +20,10 @@
 		<h2>Crédits photographiques et autres mentions relatives aux droits d’auteur</h2>
 		<p>Les photographies ainsi que l’ensemble des œuvres figurant sur ce site proviennent de sources différentes. Si aucun crédit n'est indiqué (en particulier lorsqu'il s'agit de documents d'archives), l'auteur est Jean-Damien Généro.</p>
 		<p>Le sceau présenté dans le header est dessiné par Hadrien de Visme (<a href="https://www.virimahgraphic.fr/">www.virimahgraphic.fr</a>).</p>
+		<p>Les photographies des <a href="{{url_for('acte', acte_id=1)}}">actes 1</a> et <a href="{{url_for('acte', acte_id=18)}}">18</a> ont été réalisées par les Archives départementales du Tarn.</p>
+		<p>La photographie de l'<a href="{{url_for('acte', acte_id=9)}}">acte 9</a> a été réalisée par Gilles Bernasconi des Archives municipales de Lyon. Tous droits réservés.</p>
+		<p>La photographie de l'<a href="{{url_for('acte', acte_id=17)}}">acte 17</a> a été réalisée par les Archives municipales de Villefranche-sur-Saône.</p>
+		<p>La photographie présentée sur la page <a href="{{url_for('projet')}}">À propos</a> a été réalisée par les Archives départementales du Nord. Tous droits réservés.</p>
 		<p>Les icones LinkedIn, GitHub et Academia présentées dans le footer proviennent de Flaticon (<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>)</p>
 		<p>Les crédits photographiques et autres mentions relatives aux droits d’auteur, tels que spécifiés sur ce site, doivent être respectés.</p>
 	</div>
