--- a/app/templates/pages/mentionslegales.html
+++ b/app/templates/pages/mentionslegales.html
@@ -24,14 +24,14 @@
 		<p>La photographie de l'<a href="{{url_for('acte', acte_id=9)}}">acte 9</a> a été réalisée par Gilles Bernasconi des Archives municipales de Lyon. Tous droits réservés.</p>
 		<p>La photographie de l'<a href="{{url_for('acte', acte_id=17)}}">acte 17</a> a été réalisée par les Archives municipales de Villefranche-sur-Saône.</p>
 		<p>La photographie présentée sur la page <a href="{{url_for('projet')}}">À propos</a> a été réalisée par les Archives départementales du Nord. Tous droits réservés.</p>
-		<p>Les icones LinkedIn, GitHub et Academia présentées dans le footer proviennent de Flaticon (<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>)</p>
+		<p>Les icônes LinkedIn, GitHub et Academia présentées dans le footer proviennent de Flaticon (<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>)</p>
 		<p>Les crédits photographiques et autres mentions relatives aux droits d’auteur, tels que spécifiés sur ce site, doivent être respectés.</p>
 	</div>
 	<div class="mentions-div">
 		<h2>Liens</h2>
 		<p>L’établissement de liens vers le présent site est possible.</p>
 		<p>La mention explicite du site &#171;&nbsp;Actes de Charles I<sup>er</sup> de Bourbon&nbsp;&#187; dans l’intitulé du lien est souhaitée.</p>
-		<p>L'École natinoale des chartes et Jean-Damien Généro se réservent le droit de demander la suppression d’un lien qu’ils estiment non-conforme à l’objet du site &#171;&nbsp;Actes de Charles I<sup>er</sup> de Bourbon&nbsp;&#187;.</p>
+		<p>L'École nationale des chartes et Jean-Damien Généro se réservent le droit de demander la suppression d’un lien qu’ils estiment non-conforme à l’objet du site &#171;&nbsp;Actes de Charles I<sup>er</sup> de Bourbon&nbsp;&#187;.</p>
 	</div>
 	<div class="mentions-div">
 		<h2>Données personnelles</h2>
