--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -108,12 +108,22 @@ a:hover, a:active {
 }
 
 .home-text {
-    padding-top: 7%;
+    padding-top: 4%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     text-align: justify;
+}
+
+.home-text-main {
+    font-size: large;
+    line-height: 2;
+}
+
+.home-text-sub {
+    font-size: 10pt;
+    font-style: italic;
 }
 
 /* PAGES PROJET = À PROPOS, BIBLIOGRAPHIE, LE DUC */
