--- a/app/templates/pages/projet.html
+++ b/app/templates/pages/projet.html
@@ -6,7 +6,7 @@
     	<figure>
 			<img src="{{url_for('static', filename='img/projet_acte_1435.jpg')}}" alt="Acte du 1er octobre 1435" class="img-global"/>
 			<figcaption>
-				<p class="caption-main">Acte du 1<sup>er</sup> octobre 1435, par lequel Charles de Bourbon et les ambassadeurs du roi à la convention d'Arras accusent réception de deux lettres de Philippe le Bon. Archives départementales du Nord, B 304, cote 15.660 (685 x 1160 mm., dont repli 60 mm.).</p>
+				<p class="caption-main">Acte du 1<sup>er</sup> octobre 1435, par lequel Charles de Bourbon et les ambassadeurs du roi à la convention d'Arras accusent réception de deux lettres de Philippe le Bon. Archives départementales du Nord, B 304, cote 15.660.<br />(685 x 1160 mm., dont repli 60 mm.)</p>
 				<p class="caption-sub">© Archives départementales du Nord</p>
 			</figcaption>
 		</figure>
