--- a/app/templates/pages/projet.html
+++ b/app/templates/pages/projet.html
@@ -2,7 +2,7 @@
 {% block corps %}
 <div class="container">
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-5">-
     	<figure>
 			<img src="{{url_for('static', filename='img/projet_acte_1435.jpg')}}" alt="Acte du 1er octobre 1435" class="img-global"/>
 			<figcaption>
